--- a/COURSE_MATERIALS/quality_control/slides/010_title.tex
+++ b/COURSE_MATERIALS/quality_control/slides/010_title.tex
@@ -4,5 +4,5 @@
 
 % Ver por que aparecen links en el small title
 
-\def \titulolargo {Main Title} % long title:  this will go to the FIRST slide.
-\def \titulocorto {Short Title} % short title: this will go to the FOOTER of the slides.
+\def \titulolargo {Quality control \& Data Preprocessing} % long title:  this will go to the FIRST slide.
+\def \titulocorto {Quality control \& Data Preprocessing} % short title: this will go to the FOOTER of the slides.
